syntax = "proto3";

option go_package = "./usersService";


message BasicResponse {
  string message = 1;
}


message EmployeeInfo{
  string info = 1;
}


message UserByNameRequest{
  string name = 1;
}


// for map skills
message any{

}


message User{
  string name = 1;
  uint32 age = 2;
  bool sex = 3;
  string company = 4;
  map<string, any> skills = 5;
}


service UserCenter{
  rpc AddUser(User) returns (BasicResponse);
  rpc GetUserByName(UserByNameRequest) returns (EmployeeInfo);
  rpc DeleteUserByName(UserByNameRequest) returns (BasicResponse);
  rpc UpdateSalary(UserByNameRequest) returns (BasicResponse);
}